<resources>
    <!-- MISC -->
    <string name="app_name">SeraQchove</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">ENTRAR</string>
    <string name="registro">Registrar</string>

    <!-- LOCALS -->
    <string name="locals">Locais</string>
    <string name="add_locals">Digite o local que deseja adicionar.</string>
    <string name="editLocals">Digite o novo local.</string>
    <string name="local_label">Local</string>
    <string name="adicionar">ADICIONAR</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="editarLocal">Editar</string>

    <!-- HINTS -->
    <string name="user_hint">Digite seu usuário&#8230;</string>
    <string name="passw_hint">Digite sua senha&#8230;</string>
    <string name="passw_repeat_hint">Digite sua senha novamente&#8230;</string>
    <string name="locals_hint">Digite uma cidade&#8230;</string>

    <!-- LOGIN SCREEN -->
    <string name="nao_cadastrado">Ainda não possui uma conta?</string>
    <string name="cadastrese"><u>Cadastre-se</u></string>

    <!-- REGISTER SCREEN -->
    <string name="repetir_senha">Repita sua senha</string>
    <string name="cadastro">Registro</string>

    <!-- HOME SCREEN -->
    <string-array name="countries" />

</resources>