<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragments.RegisterFragment">

    <ImageView
        android:id="@+id/registerPattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/register_pattern"
        android:layout_alignParentBottom="true"
        />

    <ImageView
        android:id="@+id/logoinRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        />

    <TextView
        style="@style/TextView"
        android:id="@+id/text_register"
        android:layout_toEndOf="@id/logoinRegister"
        android:layout_marginTop="60dp"
        android:text="@string/cadastro"

        android:textSize="40sp"
        android:fontFamily="@font/montserrat_bold"
        />

    <!-- FORM  -->

    <View
        style="@style/FormContainer"
        android:id="@+id/formContainer"
        android:layout_below="@id/logoinRegister"
        />

    <!-- USUÁRIO -->
    <TextView
        style="@style/TextView"
        android:id="@+id/text_label_usuario"
        android:layout_alignStart="@id/formContainer"
        android:layout_alignTop="@id/formContainer"
        android:layout_marginStart="13dp"
        android:paddingBottom="4dp"
        android:text="@string/usuario"

        android:textSize="15sp"
        android:fontFamily="@font/montserrat_semi_bold"
        />

    <EditText
        style="@style/EditText"
        android:id="@+id/register_username"
        android:hint="@string/user_hint"
        android:layout_below="@id/text_label_usuario"
        />

    <!-- SENHA -->
    <TextView
        style="@style/TextView"
        android:id="@+id/text_label_senha"
        android:layout_alignStart="@id/formContainer"
        android:layout_below="@+id/register_username"
        android:layout_marginTop="10dp"
        android:layout_marginStart="13dp"
        android:paddingBottom="4dp"
        android:text="@string/senha"

        android:textSize="15sp"
        android:fontFamily="@font/montserrat_semi_bold"
        />

    <EditText
        style="@style/EditText"
        android:id="@+id/register_passw"
        android:hint="@string/passw_hint"
        android:layout_below="@id/text_label_senha"
        android:drawableRight="@drawable/ic_eye"
        android:inputType="textPassword"
        />

    <!-- REPETIR SENHA -->
    <TextView
        style="@style/TextView"
        android:id="@+id/text_label_repetir_senha"
        android:layout_alignStart="@id/formContainer"
        android:layout_below="@+id/register_passw"
        android:layout_marginTop="10dp"
        android:layout_marginStart="13dp"
        android:paddingBottom="4dp"
        android:text="@string/repetir_senha"

        android:textSize="15sp"
        android:fontFamily="@font/montserrat_semi_bold"
        />

    <EditText
        style="@style/EditText"
        android:id="@+id/register_passw_repeat"
        android:hint="@string/passw_repeat_hint"
        android:layout_below="@+id/text_label_repetir_senha"
        android:drawableRight="@drawable/ic_eye"
        android:inputType="textPassword"
        />

    <!-- BUTTON -->
    <androidx.appcompat.widget.AppCompatButton
        style="@style/Button"
        android:id="@+id/register_btn"
        android:layout_below="@+id/register_passw_repeat"
        android:layout_marginTop="30dp"
        android:text="@string/registro"
        />


    <ImageView
        android:id="@+id/brand"
        android:src="@drawable/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        />
</RelativeLayout>