<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragments.CreateLocationFragment">

    <ImageView
        android:id="@+id/localPattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/locals_pattern"
        android:layout_alignParentBottom="true"
        />

    <ImageView
        android:id="@+id/localsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:src="@drawable/locals_icon"
        />

    <TextView
        style="@style/TextView"
        android:id="@+id/text_locals"
        android:layout_toEndOf="@id/localsIcon"
        android:layout_marginTop="60dp"
        android:text="@string/locals"
        android:layout_marginStart="10dp"

        android:textSize="40sp"
        android:fontFamily="@font/montserrat_bold"
        />

    <TextView
        style="@style/TextView"
        android:id="@+id/text_locals_add"
        android:layout_below="@id/localsIcon"
        android:text="@string/add_locals"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"

        android:textSize="17sp"
        android:fontFamily="@font/montserrat_medium"
        />

    <TextView
        style="@style/TextView"
        android:id="@+id/text_label_local"
        android:layout_marginStart="40dp"
        android:layout_below="@id/text_locals_add"
        android:paddingBottom="4dp"
        android:text="@string/local_label"
        android:layout_marginTop="30dp"


        android:textSize="15sp"
        android:fontFamily="@font/montserrat_semi_bold"
        />

    <AutoCompleteTextView
        style="@style/EditText"
        android:id="@+id/city_field"
        android:hint="@string/locals_hint"
        android:layout_below="@+id/text_label_local"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Button"
        android:id="@+id/add_city_btn"
        android:layout_below="@+id/city_field"
        android:layout_marginTop="40dp"
        android:text="@string/adicionar"
        />
</RelativeLayout>